# aiml_cpp

./: CMakeLists.txt  main.cpp
aiml/: test.aiml
pugixml/: pugiconfig.hpp
